# legion-stage-mac

./: CMakeLists.txt
deploy/Legion Stage/: Install.bat
docs/superpowers/plans/: 2026-03-25-track-system.md
docs/superpowers/specs/: 2026-03-25-audio-engine-foundation-design.md  2026-03-25-track-system-design.md
src/: ArturiaPresetScanner.h  BlueprintLookAndFeel.h  ClipPlayerNode.cpp  ClipPlayerNode.h  DawLookAndFeel.h  DawTheme.h  FrostLookAndFeel.h  GainProcessor.cpp  GainProcessor.h  GlassLookAndFeel.h  IceLookAndFeel.h  IndigoLookAndFeel.h  JournalLookAndFeel.h  KeystageLookAndFeel.h  LinenLookAndFeel.h  LissajousComponent.h  Main.cpp  MainComponent.cpp  MainComponent.h  Midi2Handler.cpp  Midi2Handler.h  MidiClip.h  MidnightLookAndFeel.h  MixerComponent.h  NeonLookAndFeel.h  NoirLookAndFeel.h  PianoRollComponent.cpp  PianoRollComponent.h  PluginHost.cpp  PluginHost.h  SequencerEngine.cpp  SequencerEngine.h  SpectrumComponent.h  SplashComponent.h  SteelLookAndFeel.h  TerminalLookAndFeel.h  ThemeManager.h  TimelineComponent.cpp  TimelineComponent.h  TrackComponent.cpp  (+4 more)
