cmake_minimum_required(VERSION 3.22)
project(Sequencer VERSION 1.1.0)

# ASIO SDK path — JUCE needs this to compile ASIO support (Windows only)
if(WIN32)
    set(JUCE_ASIO_SDK_DIR "${CMAKE_CURRENT_SOURCE_DIR}/libs/asio-sdk" CACHE PATH "ASIO SDK location")
endif()

add_subdirectory(libs/JUCE)

juce_add_gui_app(Sequencer
    PRODUCT_NAME "Legion Stage"
    COMPANY_NAME "Dev"
)

juce_generate_juce_header(Sequencer)

target_sources(Sequencer PRIVATE
    src/Main.cpp
    src/MainComponent.h
    src/MainComponent.cpp
    src/PluginHost.h
    src/PluginHost.cpp
    src/GainProcessor.h
    src/GainProcessor.cpp
    src/MidiClip.h
    src/ClipPlayerNode.h
    src/ClipPlayerNode.cpp
    src/SequencerEngine.h
    src/SequencerEngine.cpp
    src/PianoRollComponent.h
    src/PianoRollComponent.cpp
    src/Midi2Handler.h
    src/Midi2Handler.cpp
    src/DawTheme.h
    src/DawLookAndFeel.h
    src/WalkmanLookAndFeel.h
    src/GlassLookAndFeel.h
    src/NoirLookAndFeel.h
    src/TerminalLookAndFeel.h
    src/JournalLookAndFeel.h
    src/LinenLookAndFeel.h
    src/IceLookAndFeel.h
    src/IndigoLookAndFeel.h
    src/FrostLookAndFeel.h
    src/KeystageLookAndFeel.h
    src/BlueprintLookAndFeel.h
    src/SpectrumComponent.h
    src/LissajousComponent.h
    src/GForceComponent.h
    src/GeissComponent.h
    src/ProjectMComponent.h
    src/TouchPianoComponent.h
    src/MixerComponent.h
    src/SplashComponent.h
    src/ThemeManager.h
    src/TimelineComponent.h
    src/TimelineComponent.cpp
    src/UpdateChecker.h
    src/UpdateChecker.cpp
    src/UpdateDialog.h
    src/UpdateDialog.cpp
)

target_compile_definitions(Sequencer PRIVATE
    JUCE_WEB_BROWSER=0
    JUCE_USE_CURL=0
    JUCE_PLUGINHOST_VST3=1
)

if(WIN32)
    target_compile_definitions(Sequencer PRIVATE
        JUCE_ASIO=1
        JUCE_WASAPI=1
        JUCE_DIRECTSOUND=1
    )
    target_include_directories(Sequencer PRIVATE
        ${CMAKE_CURRENT_SOURCE_DIR}/libs/asio-sdk/common
    )
elseif(APPLE)
    target_compile_definitions(Sequencer PRIVATE
        JUCE_PLUGINHOST_AU=1
        JUCE_COREAUDIO=1
        JUCE_COREMIDI=1
    )
endif()

target_link_libraries(Sequencer PRIVATE
    juce::juce_audio_utils
    juce::juce_audio_devices
    juce::juce_audio_processors
    juce::juce_dsp
    juce::juce_opengl
    juce::juce_recommended_config_flags
    juce::juce_recommended_warning_flags
)

if(WIN32)
    target_link_libraries(Sequencer PRIVATE opengl32)
elseif(APPLE)
    find_library(OPENGL_FRAMEWORK OpenGL)
    find_library(COREAUDIO_FRAMEWORK CoreAudio)
    find_library(COREMIDI_FRAMEWORK CoreMIDI)
    find_library(AUDIOUNIT_FRAMEWORK AudioUnit)
    find_library(AUDIOTOOLBOX_FRAMEWORK AudioToolbox)
    target_link_libraries(Sequencer PRIVATE
        ${OPENGL_FRAMEWORK}
        ${COREAUDIO_FRAMEWORK}
        ${COREMIDI_FRAMEWORK}
        ${AUDIOUNIT_FRAMEWORK}
        ${AUDIOTOOLBOX_FRAMEWORK}
    )
endif()
